--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
+crispy-bootstrap5==0.7
 Django==4.1.3
+django-crispy-forms==1.14.0
+django-environ==0.9.0
 exceptiongroup==1.0.4
 idna==3.4
 iniconfig==1.1.1
@@ -12,6 +15,7 @@ packaging==21.3
 pluggy==1.0.0
 pyparsing==3.0.9
 pytest==7.2.0
+pytest-django==4.5.2
 requests==2.28.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
