--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,24 @@ bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
 crispy-bootstrap5==0.7
+dj-database-url==1.2.0
+dj-email-url==1.0.6
 Django==4.1.3
+django-cache-url==3.4.4
 django-crispy-forms==1.14.0
 django-environ==0.9.0
+environs==9.3.5
 exceptiongroup==1.0.4
 idna==3.4
 iniconfig==1.1.1
+marshmallow==3.19.0
 packaging==21.3
 pluggy==1.0.0
+psycopg2-binary==2.9.5
 pyparsing==3.0.9
 pytest==7.2.0
 pytest-django==4.5.2
+python-dotenv==0.21.0
 requests==2.28.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
