--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-asgiref==3.5.2
+asgiref==3.8.1
 attrs==22.1.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
 certifi==2022.9.24
 charset-normalizer==2.1.1
-crispy-bootstrap5==0.7
-dj-database-url==1.2.0
+crispy-bootstrap5==2025.4
+dj-database-url==2.1
 dj-email-url==1.0.6
-Django==4.1.3
+Django==5.2.8
 django-cache-url==3.4.4
-django-crispy-forms==1.14.0
-django-environ==0.9.0
+django-crispy-forms==2.3
+django-environ==0.11.2
 environs==9.3.5
 exceptiongroup==1.0.4
 idna==3.4
@@ -28,3 +28,5 @@ soupsieve==2.3.2.post1
 sqlparse==0.4.3
 tomli==2.0.1
 urllib3==1.26.13
+whitenoise>=6.6
+gunicorn>=22.0
